changing login from online to offline
